# SIFACT

./: .gitignore  .vercelignore  main.py  pyproject.toml  requirements.txt  vercel.json
agents/: extraction_agent.py  synthesis_agent.py  verification_agent.py
api/: index.py
backend/: __init__.py  main.py
config/: settings.py
frontend/: app.py
frontend/.streamlit/: secrets.toml
graph/: state.py  workflow.py
tools/: news_api_rag.py
utils/: helpers.py
